Fix first and last columsn positioning on mobile deevices

--- a/css/style.css
+++ b/css/style.css
@@ -10596,7 +10596,7 @@ form#webform-submission-contact-node-14-add-form #edit-preferred-date-and-time-d
 .wt-three-col.lbrb .wt-col-1,
 .wt-three-col.lbrb .wt-col-3 {
   order: 1;
-  flex: 50%;
+  flex: 45%;
 }
 
 .wt-three-col.lbrb .wt-col-1 {
