--- a/scss/_ckeditor-view.scss
+++ b/scss/_ckeditor-view.scss
@@ -116,7 +116,7 @@
   .wt-col-1,
   .wt-col-3 {
     order: 1;
-    flex: 50%;
+    flex: 45%;
   }
   .wt-col-1 {
     padding-right: 0.5em;
